--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  background-image: url("/img/fondo.png");
+  background-image: url('../img/fondo.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
